# leetcode-py

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .releaserc.mjs  Makefile.bak  README.md  add_problems.py  bakefile.py  pyproject.toml  pyproject.toml.bak  sonar-project.properties
.claude/.dev/: check_problem_lists.py  next_problem.py  update_tags.py
.claude/commands/: batch-problem-creation.md  problem-creation.md
.cursor/.dev/: check_problem_lists.py  update_tags.py
.github/workflows/: cd.yml  ci-pre-commit.yml  ci-test-reproducibility.yml  ci-test.yml  ci.yml  pre-commit.yml  publish.yml  security.yml  semantic-pull-request.yaml  shared-zerv-versioning.yml  test-reproducibility.yml  test.yml
leetcode/_01_matrix/: README.md  helpers.py  playground.ipynb  solution.py  test_solution.py
leetcode/_3sum/: README.md  helpers.py  solution.py  test_solution.py
leetcode/_3sum_closest/: README.md  helpers.py  solution.py  test_solution.py
leetcode/_4sum/: README.md  helpers.py  solution.py  test_solution.py
leetcode/accounts_merge/: README.md  helpers.py  playground.py  solution.py  test_solution.py
leetcode/add_binary/: README.md  playground.py  solution.py  test_solution.py
leetcode/add_strings/: README.md  helpers.py  solution.py  test_solution.py
leetcode/add_to_array_form_of_integer/: README.md  helpers.py  solution.py  test_solution.py
leetcode/add_two_numbers/: README.md  playground.py  solution.py  test_solution.py
leetcode/alien_dictionary/: README.md  playground.py  solution.py
leetcode/all_nodes_distance_k_in_binary_tree/: README.md  helpers.py  playground.py  solution.py  test_solution.py
leetcode/assign_cookies/: README.md  helpers.py  solution.py  test_solution.py
leetcode/asteroid_collision/: README.md  helpers.py  playground.py  solution.py  test_solution.py
leetcode/backspace_string_compare/: README.md  helpers.py  playground.py  solution.py  test_solution.py
leetcode/balanced_binary_tree/: README.md  playground.py
leetcode/baseball_game/: README.md  helpers.py  playground.py  solution.py  test_solution.py
leetcode/basic_calculator/: README.md  playground.py  test_solution.py  test_solution_extra.py
leetcode/basic_calculator_ii/: README.md  helpers.py  playground.py  solution.py  test_solution.py
leetcode/best_time_to_buy_and_sell_stock/: README.md  playground.py  test_solution.py
leetcode/best_time_to_buy_and_sell_stock_ii/: README.md  helpers.py  playground.py  solution.py  test_solution.py
leetcode/best_time_to_buy_and_sell_stock_with_cooldown/: README.md  playground.py  solution.py  test_solution.py
leetcode/binary_search/: README.md  playground.py
leetcode/binary_tree_inorder_traversal/: README.md  helpers.py  playground.py  solution.py  test_solution.py
leetcode/binary_tree_level_order_traversal/: README.md  playground.py
leetcode/binary_tree_maximum_path_sum/: README.md  playground.py  solution.py
leetcode/binary_tree_postorder_traversal/: README.md  helpers.py  playground.py  solution.py  test_solution.py
leetcode/binary_tree_preorder_traversal/: README.md  helpers.py  playground.py  solution.py  test_solution.py
leetcode/binary_tree_right_side_view/: README.md  playground.py  test_solution.py  test_solution_extra.py
leetcode/binary_tree_zigzag_level_order_traversal/: README.md  helpers.py  playground.py  solution.py  test_solution.py
leetcode/bitwise_and_of_numbers_range/: README.md  helpers.py  playground.py  solution.py  test_solution.py
leetcode/boats_to_save_people/: README.md  helpers.py  playground.py  solution.py  test_solution.py
leetcode/build_a_matrix_with_conditions/: README.md  helpers.py  playground.py  solution.py  test_solution.py
scripts/: check_tag_problems.py  sort_tags.py
tests/: test_test_utils.py
(+1587 files in other folders)
