[project]
name = "leetcode-py-sdk"
version = "0.0.0" # use git tag instead
description = "Modern Python LeetCode practice environment with automated problem generation, beautiful data structure visualizations, and comprehensive testing"
authors = [
  {name = "Wisaroot Lertthaweedech", email = "l.wisaroot@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["algorithms", "coding-practice", "data-structures", "interview-prep", "leetcode"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Education",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "anytree>=2.13.0",
  "bakefile>=0.0.8",
  "cookiecutter>=2.6.0",
  "graphviz>=0.21",
  "json5>=0.13.0",
  "loguru>=0.7.3",
  "requests>=2.32.5",
  "rich>=14.1.0",
  "ruff>=0.14.0",
  "ty>=0.0.13",
  "typer>=0.21.0"
]

[project.scripts]
lcpy = "leetcode_py.cli.main:app"

[project.urls]
Homepage = "https://github.com/wislertt/leetcode-py"
Repository = "https://github.com/wislertt/leetcode-py"

[dependency-groups]
dev = [
  "deptry>=0.24.0",
  "ipykernel>=7.0.0",
  "isort>=7.0.0",
  "jupytext>=1.16.6",
  "mypy>=1.17.1",
  "nbqa>=1.9.1",
  "pre-commit>=4.3.0",
  "pytest-cov>=7.0.0",
  "pytest>=9.0.0",
  "ruff>=0.14.0",
  "toml-sort>=0.24.3"
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.coverage.run]
omit = [
  "src/leetcode_py/cli/resources/**"
]

[tool.deptry]
known_first_party = ["leetcode_py"]
extend_exclude = [
  ".cursor",
  "leetcode",
  "src/leetcode_py/cli/resources"
]

[tool.pytest.ini_options]
testpaths = ["leetcode", "tests"]
norecursedirs = ["src/leetcode_py/cli/resources"]

[tool.ruff]
line-length = 100
extend-exclude = ["src/leetcode_py/cli/resources"]

[tool.ruff.lint]
select = [
  "ARG",
  "B", # bugbear
  "C4", # flake8-comprehensions
  "E", # pycodestyle (error)
  "F", # pyflakes
  "I", # isort
  "N",
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PYI", # flake8-pyi
  "RUF",
  "SIM", # flake8-simplify
  "UP" # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"leetcode/*/playground.py" = ["B018"]
"leetcode/*/solution.py" = ["ARG002"]

[tool.ty]

[tool.ty.environment]
root = [
  ".",
  "./.cursor/.dev"
]

[[tool.ty.overrides]]
include = ["leetcode/*/playground.ipynb", "leetcode/*/playground.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.ty.src]
exclude = [
  "src/leetcode_py/cli/resources"
]

[tool.uv.build-backend]
module-name = ["leetcode_py"]
module-root = "src"

# # Debug with bakefile from test pypi
# =============================================
# # Debug
# [tool.uv]
# index-strategy = "unsafe-best-match"
# prerelease = "allow"
#
# # Debug
# [[tool.uv.index]]
# name = "testpypi"
# url = "https://test.pypi.org/simple/"
# explicit = true
#
# # Debug
# [tool.uv.sources]
# bakefile = {index = "testpypi"}
# =============================================
#
#
# Debug with local bakefile in editable mode
# =============================================
# # Debug
# [tool.deptry.package_module_name_map]
# bakefile = ["bake", "bakelib"]
#
# # Debug
# [tool.uv.sources]
# bakefile = {workspace = true}
#
# # Debug
# [tool.uv.workspace]
# members = [".", "../bakefile"]
# =============================================
